fixed flicker

--- a/assets/css/art-projects.css
+++ b/assets/css/art-projects.css
@@ -1,6 +1,7 @@
 main {
   width: 100vw;
   min-height: 100vh;
+  background: #0e0e0e;
 }
 
 .project-holder {
@@ -24,6 +25,8 @@ img {
   max-height: 80vh;
   margin-bottom: 12px;
   object-fit: contain;
+  /*backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);*/
 }
 
 h1 {
